--- a/weatherapp/src/Components/MoreDetails.css
+++ b/weatherapp/src/Components/MoreDetails.css
@@ -1,3 +1,3 @@
 .bg-lightgrey {
-    background-image: linear-gradient(to right top, #3968e7, #3b6de8, #3e73e8, #4278e8, #467de8, #447be8, #4378e9, #4276e9, #3e6be9, #3e60e7, #4153e5, #4745e1);
+    background-color:  rgba(240, 240, 240, 0.14);
 }
