--- a/weatherapp/src/App.css
+++ b/weatherapp/src/App.css
@@ -37,5 +37,6 @@
   }
 }
  .bg-bluegradient{
-  background-image: linear-gradient(to right top, #2672e5, #176aeb, #0f61f0, #1857f4, #284bf7);
+  /* background-image: linear-gradient(to right top, #2672e5, #176aeb, #0f61f0, #1857f4, #284bf7); */
+  background-image:  url('./../images/sun.gif');
 }
